error messge alignment fix

--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -128,6 +128,7 @@
     margin-block-start: 0em !important;
     margin-block-end: 0em !important;
     color: rgb(255, 145, 0);
+    text-align: left;
 }
 
 @media (max-width: 962px) {
